src/Services/pfServices/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pf-services
  labels:
    app.kubernetes.io/part-of: pf-erp
